[project]
name = "connector"
version = "0.1.0"
description = "Connector for external APIs"
readme = "README.md"
authors = [{ name = "Tom", email = "tomclesius@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pynacl>=1.5.0",
    "rsa>=4.9.1",
    "tenacity>=9.1.2",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
