[project]
name = "connector"
version = "0.1.0"
description = "Connector for external APIs"
readme = "README.md"
authors = [{ name = "Tom", email = "tom@softwerk.ai" }]
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.1.0",
    "diskcache>=5.6.3",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pynacl>=1.5.0",
    "rsa>=4.9.1",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datamodel-code-generator",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
datamodel-code-generator = { git = "https://github.com/koxudaxi/datamodel-code-generator.git" }
